log/1.txt
drivers/misc/mediatek/lcm/mt65xx_lcm_list.c:976:53: error: size of array 'assertion_failed_at_line_979' is negative
 #define LCM_COMPILE_ASSERT_XX(condition, line) char assertion_failed_at_line_##line[(condition)?1:-1]
                                                     ^
drivers/misc/mediatek/lcm/mt65xx_lcm_list.c:975:47: note: in expansion of macro 'LCM_COMPILE_ASSERT_XX'
 #define LCM_COMPILE_ASSERT_X(condition, line) LCM_COMPILE_ASSERT_XX(condition, line)
                                               ^
drivers/misc/mediatek/lcm/mt65xx_lcm_list.c:974:39: note: in expansion of macro 'LCM_COMPILE_ASSERT_X'
 #define LCM_COMPILE_ASSERT(condition) LCM_COMPILE_ASSERT_X(condition, __LINE__)
                                       ^
drivers/misc/mediatek/lcm/mt65xx_lcm_list.c:979:1: note: in expansion of macro 'LCM_COMPILE_ASSERT'
 LCM_COMPILE_ASSERT(0 != sizeof(lcm_driver_list)/sizeof(LCM_DRIVER*));
 ^
scripts/Makefile.build:308: recipe for target 'drivers/misc/mediatek/lcm/mt65xx_lcm_list.o' failed
make[4]: *** [drivers/misc/mediatek/lcm/mt65xx_lcm_list.o] Error 1
scripts/Makefile.build:455: recipe for target 'drivers/misc/mediatek/lcm' failed
make[3]: *** [drivers/misc/mediatek/lcm] Error 2
make[3]: *** Waiting for unfinished jobs....
